--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^5.3.4",
     "react-svg": "^16.1.34",
+    "redux": "^5.0.1",
     "sass": "^1.80.4"
   },
   "devDependencies": {
