--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,10 +14,12 @@
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "cryptr": "^6.3.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mongodb": "^6.9.0",
+    "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7"
   }
 }
