--- a/Angular Frontend/angular.json
+++ b/Angular Frontend/angular.json
@@ -24,7 +24,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/my-books",
+            "outputPath": "../Backend/public",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": ["zone.js"],
