--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon --ignore \"./data\"  server.js"
+    "dev":  "set NODE_ENV=development&& nodemon --ignore \"./data\" server.js"
   },
   "author": "votex001",
   "license": "ISC",
