--- a/client/angular.json
+++ b/client/angular.json
@@ -109,6 +109,7 @@
   "cli": {
     "cache": {
       "enabled": false
-    }
+    },
+    "analytics": "3ec80f98-1253-4b04-9d0b-bc4c0dcdf3ee"
   }
 }
