--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev":  "set NODE_ENV=development&& nodemon --ignore \"./data\" server.js",
+    "dev": "set NODE_ENV=development&& nodemon --ignore \"./data\" server.js",
     "dev-linux": "NODE_ENV=development nodemon --ignore './data' server.js"
   },
   "author": "votex001",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
