--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -9,6 +9,7 @@ RUN npm run build -- --output-path=dist/frontend --configuration=production
 
 FROM nginx:alpine
 COPY --from=build /app/dist/frontend/browser /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 4200
 CMD ["nginx","-g","daemon off;"]
