--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "set NODE_ENV=development&& nodemon --ignore \"./data\" server.js",
-    "dev-linux": "NODE_ENV=development nodemon --ignore './data' server.js"
+    "dev": "set NODE_ENV=development&& nodemon --ignore \"./data\" --ignore \"./client\" server.js",
+    "dev-linux": "NODE_ENV=development nodemon --ignore './data' --ignore './client' server.js"
   },
   "author": "votex001",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -20,7 +21,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mongodb": "^6.9.0",
+    "multer": "^2.0.2",
     "nodemailer": "^6.9.16",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "streamifier": "^0.1.1"
   }
 }
